# course-companion-fte

./: API_OPENAPI.json  BUGS.md  CHATGPT_APP_REACT_UI_SETUP.md  CHATGPT_APP_SETUP.md  CHATGPT_APP_UI_GUIDE.md  CLAUDE.md  COST_ANALYSIS.md  DELIVERABLES.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_VERIFICATION.md  GAMIFICATION_ARCHITECTURE.md  GAMIFICATION_DEPLOYMENT_GUIDE.md  GAMIFICATION_IMPLEMENTATION_GUIDE.md  GAMIFICATION_IMPLEMENTATION_SUMMARY.md  GAMIFICATION_QUICK_REFERENCE.md  HACKATHON_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  MANUAL_SETUP.md  MCP_CHATGPT_APP_GUIDE.md  MCP_SERVER_STATUS.md  PHASE_2_COMPLETE.md  README.md  Requirements.md  SPECIFICATION.md  TEACHER_DASHBOARD_STATUS.md  WIDGET_TEST_REPORT.md  achievements_response.json  chapter_response.json  chatgpt-connector-setup.md  course-backend-nginx.conf  deploy-frontend.sh  deploy-server.sh  fix-nginx.sh  fix-widget.sh  fix_backend.sh  production-nginx.conf  quiz_answer.json  restart_backend.sh  sse-testservers.conf  (+6 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  add_content.py  add_content_simple.py  add_enhanced_quizzes.py  add_quizzes.py  add_quizzes_simple.py  alembic.ini  docker-compose.mcp.yml  fly.toml  init_db.py  mcp_server_app.py  mcp_server_proper.py  populate_content.py  pyproject.toml  requirements.txt  simple_init_db.py  start_mcp.sh  start_mcp_server.py  start_mcp_sse.py  update_content.py
backend/alembic/: env.py
backend/chatgpt-ui/: README.md  deploy.sh  package.json
backend/scripts/: migrate_add_role.py  reset_database.py  seed_database.py  (+2 more)
(+266 files in other folders)
